# py-circle-server

./: .gitignore  Dockerfile  README.md  compose.yaml  hello.py  pyproject.toml  server.py  server_tests.py
docker/: Dockerfile  compose.yaml
src/server/: logger.py  model.py  pit_manager.py  server.py  webrtc_manager.py
src/server/model/: __init__.py  snake.py  snake_pit.py  world.py
tests/: test_model.py  test_pit_manager.py  test_server.py  test_webrtc_integration.py
tests/model/: test_model.py  test_snake.py  test_snake_pit.py
