[project]
name = "sss"
version = "0.1.0"
description = "WebRTC-based snake game"
requires-python = ">=3.13"
dependencies = [
    "eventlet>=0.39.1",
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "flask-socketio>=5.5.1",
    "pytest>=0.39.1",
]

[tool.pytest.ini_options]
testpaths = ["sss"]
python_files = ["*_tests.py"] 