[project]
name = "sss"
version = "0.1.0"
description = "WebRTC-based snake game"
requires-python = ">=3.13"
dependencies = [
    "eventlet>=0.39.1",
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "flask-socketio>=5.5.1",
]

[project.scripts]
serve = "server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/server"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
